--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <%= stylesheet_pack_tag "theme" %>
   <link rel="shortcut icon" href="<%= favicon_path %>">
 </head>
-<body>
+<body style="background-color:<%= @random_color %>">
 <section class="starter">
   <div class="container">
     <div class="row">
